@@ -2,19 +2,18 @@ package kitchenpos.products.application;
 
 import kitchenpos.products.infra.PurgomalumClient;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class FakePurgomalumClient implements PurgomalumClient {
     private static final List<String> profanities;
 
     static {
-        profanities = Arrays.asList("비속어", "욕설");
+        profanities = List.of("비속어", "욕설");
     }
 
     @Override
     public boolean containsProfanity(final String text) {
         return profanities.stream()
-            .anyMatch(profanity -> text.contains(profanity));
+            .anyMatch(text::contains);
     }
 }
